(fix) fix player styles